home-header.css
.home-top{
      height: 100vh;
      background: linear-gradient(
        rgba(0, 0, 0, 1),
        rgba(0, 0, 0, 0.8),
        rgba(0, 0, 0, 0.7),
        rgba(0, 0, 0, 0.6)
      ), url(./assets/bg-imgg3.jpg);
      background-position: center;
      background-size: cover;

      display: flex;
      flex-direction: column;
      position: relative;
    }

    .header{
      padding: 4px 30px;
      background-color: rgba(0, 0, 0, 0.6);
      display: flex;
      justify-content: space-between;
      align-items: center;
      color: whitesmoke;

      position: fixed;
      top: 0; left: 0; right: 0;
      z-index: 100;
    }

    .header h2{
      display: inline-block;
      margin: 0;
      margin-left: 3px;
    }

    .header i{
      font-size: 20px;
    }

    .header ul{
      list-style: none;
      display: flex;
      gap: 10px;     
    }

    .header ul li a{
      text-decoration: none;
      color: whitesmoke;
      transition: 0.2s;
    }

    .header ul li a:hover{
      color: #11345c;
    }

    .center-side{
      margin: auto; /*center vertically & horizontally*/
      text-align: center;
      color: whitesmoke;
    }
    .center-side h1{
      font-size: 40px;
    }
    
    .center-side p{
      font-size: 35px;
      font-family: "Tangerine", cursive;
      font-weight: 700;

    }

    .center-side button{
      padding: 7px 15px;
      border: none;
      background-color: transparent;
      border: 1px solid whitesmoke;
      color: whitesmoke;
      font-size: 15px;
      border-radius: 3px;
      transition: 0.2s;
      cursor: pointer;
    }

    .center-side button:hover{
      background-color: #11345c; 
      border: 1px solid #11345c;
      color: whitesmoke;
    }


    /********* On Different Screens *********/

    /* small screens 0-700px */
    @media screen and (max-width: 700px) {
      .header{
        flex-direction: column;
      }
    }

